[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = []

[project]
name = "aitools"
version = "0.0.1"
authors = [{ name="huangyangke", email="924726976@qq.com" },]
description = "ai常见工具"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "requests"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["aitools"]

[project.urls]
Homepage = "https://github.com/huangyangke/aitools"
Issues = "https://github.com/huangyangke/aitools/issues"